# toml-formatter

./: .gitignore  README.md  build.gradle.kts  flake.nix  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml  publish.yml
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: base.java-toolchain.gradle.kts  base.versioning.gradle.kts  check.detekt.gradle.kts  check.kotest.gradle.kts  check.ktfmt.gradle.kts  feature.kotlin-jvm.gradle.kts  feature.protobuf-kotlin.gradle.kts
config/detekt/: detekt.yml
gradle/: libs.versions.toml
gradle-plugin/: build.gradle.kts
gradle-plugin/src/main/kotlin/com/github/lowkeylab/tomlformatter/gradle/: CheckTomlFormatTask.kt  FormatTomlTask.kt  TomlFormatterExtension.kt  TomlFormatterOperations.kt  TomlFormatterPlugin.kt
lib/: build.gradle.kts
lib/src/main/kotlin/com/github/lowkeylab/tomlformatter/: FormatToml.kt  Library.kt  TomlFormatterError.kt
lib/src/main/kotlin/io/github/lowkeylab/tomlformatter/: FormatToml.kt  TomlFormatterError.kt
lib/src/test/kotlin/com/github/lowkeylab/tomlformatter/: FormatTomlTest.kt  LibraryTest.kt
lib/src/test/kotlin/io/github/lowkeylab/tomlformatter/: FormatTomlTest.kt  FormatTomlTest.ss  ProtobufResultTest.kt  TestWasmRuntime.kt  WasmAbiTest.kt  WasmMemoryTest.kt
lib/src/test/kotlin/io/kotest/provided/: ProjectConfig.kt
lib/src/test/resources/formatting/: basic-spacing.toml  comments-inline.toml  nested-arrays.toml
wasm/: Cargo.toml  build.gradle.kts
wasm/proto/: format_toml.proto
wasm/src/: lib.rs  result.rs
(+21 files in other folders)
