[package]
name = "taplo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = "=0.8.4"
getrandom = { version = "0.2", features = ["custom"] }
prost = { version = "0.13", default-features = false, features = ["derive"] }
taplo = { version = "0.14", default-features = false }
